--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -1,32 +1,64 @@
 <section class="projects">
   <h2 class="projects__title title">Projects</h2>
   <ul class="projects__list">
-    <li>
+    <li class="projects__item">
       <p class="projects__name">HTML5, CSS3</p>
-      <ul>
-        <li><a href="" class="projects__link"></a></li>
-        <li><a href="" class="projects__link"></a></li>
+      <ul class="projects__item-list">
+        <li><p class="projects__item__descr">Group projects:</p></li>
+        <li>
+          <a href="" class="projects__item__link"
+            >https://titotrapatonni.github.io/ice-cream-code-ninjas/</a
+          >
+        </li>
+        <li>
+          <a href="" class="projects__item__link"
+            >https://fstv-electro.github.io/donut-project/</a
+          >
+        </li>
+      </ul>
+      <ul class="projects__item-list">
+        <li><p class="projects__item__descr">Single projects:</p></li>
+        <li><a href="" class="projects__item__link">...</a></li>
+        <li><a href="" class="projects__item__link">...</a></li>
       </ul>
     </li>
-    <li>
+    <li class="projects__item">
       <p class="projects__name">JavaScript</p>
-      <ul>
-        <li><a href="" class="projects__link"></a></li>
-        <li><a href="" class="projects__link"></a></li>
+      <ul class="projects__item-list">
+        <li><p class="projects__item__descr">Group projects:</p></li>
+        <li><a href="" class="projects__item__link">...</a></li>
+        <li><a href="" class="projects__item__link">...</a></li>
+      </ul>
+      <ul class="projects__item-list">
+        <li><p class="projects__item__descr">Single projects:</p></li>
+        <li><a href="" class="projects__item__link">...</a></li>
+        <li><a href="" class="projects__item__link">...</a></li>
       </ul>
     </li>
-    <li>
+    <li class="projects__item">
       <p class="projects__name">React.js, Node.js</p>
-      <ul>
-        <li><a href="" class="projects__link"></a></li>
-        <li><a href="" class="projects__link"></a></li>
+      <ul class="projects__item-list">
+        <li><p class="projects__item__descr">Group projects:</p></li>
+        <li><a href="" class="projects__item__link">...</a></li>
+        <li><a href="" class="projects__item__link">...</a></li>
+      </ul>
+      <ul class="projects__item-list">
+        <li><p class="projects__item__descr">Single projects:</p></li>
+        <li><a href="" class="projects__item__link">...</a></li>
+        <li><a href="" class="projects__item__link">...</a></li>
       </ul>
     </li>
-    <li>
+    <li class="projects__item">
       <p class="projects__name">Typescript</p>
-      <ul>
-        <li><a href="" class="projects__link"></a></li>
-        <li><a href="" class="projects__link"></a></li>
+      <ul class="projects__item-list">
+        <li><p class="projects__item__descr">Group projects:</p></li>
+        <li><a href="" class="projects__item__link">...</a></li>
+        <li><a href="" class="projects__item__link">...</a></li>
+      </ul>
+      <ul class="projects__item-list">
+        <li><p class="projects__item__descr">Single projects:</p></li>
+        <li><a href="" class="projects__item__link">...</a></li>
+        <li><a href="" class="projects__item__link">...</a></li>
       </ul>
     </li>
   </ul>
