--- a/src/partials/aside.html
+++ b/src/partials/aside.html
@@ -1,29 +1,69 @@
 <section class="sidebar">
-  <img
-    src="/src/images/photo.png"
-    alt="photo man smiling"
-    class="sidebar_photo"
-    width="370"
-  />
-  <div class="sidebar__contacts">
-    <title class="sidebar__title title"></title>
-    <ul>
-      <li></li>
-      <li></li>
-    </ul>
-  </div>
-  <div class="sidebar__tech">
-    <title class="sidebar__title title"></title>
-    <ul>
-      <li></li>
-      <li></li>
-    </ul>
-  </div>
-  <div class="sidebar__soft">
-    <title class="sidebar__title title"></title>
-    <ul>
-      <li></li>
-      <li></li>
-    </ul>
+  <div class="container">
+    <img
+      src="/src/images/photo.png"
+      alt="photo man smiling"
+      class="sidebar_photo"
+      width="370"
+    />
+    <div class="sidebar__contacts">
+      <h3 class="sidebar__title title">Contacts</h3>
+      <ul class="sidebar__contact-list">
+        <li>
+          C:
+          <a href="tel:+380732122234" class="sidebar__contacts-links"
+            >+380 73 212 22 34</a
+          >
+        </li>
+        <li>
+          E:
+          <a href="mailto:tomoesanya@gmail.com" class="sidebar__contacts-links"
+            >tomoesanya@gmail.com</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.linkedin.com/in/oleksandr-kucenko-3020a8259/"
+            class="sidebar__contacts-links"
+            ><svg class="sidebar__svg" width="24">
+              <use
+                class="sidebar__use"
+                href="/src/images/sprite-svg.svg#linkedin"
+              ></use></svg
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://github.com/Fstv-Electro"
+            class="sidebar__contacts-links"
+            ><svg class="sidebar__svg" width="24">
+              <use
+                class="sidebar__use"
+                href="/src/images/sprite-svg.svg#github"
+              ></use></svg
+          ></a>
+        </li>
+      </ul>
+    </div>
+    <div class="sidebar__tech">
+      <h3 class="sidebar__title title">Tech Skills</h3>
+      <ul class="sidebar__tech-list">
+        <li>HTML5</li>
+        <li>CSS3</li>
+        <li>GIT</li>
+        <li>WebPack</li>
+        <li>Parcel</li>
+        <li>JavaScript</li>
+      </ul>
+    </div>
+    <div class="sidebar__soft">
+      <h3 class="sidebar__title title">Soft Skills</h3>
+      <ul class="sidebar__soft-list">
+        <li>Scrum</li>
+        <li>Agile</li>
+        <li>Waterfall</li>
+        <li>GTD</li>
+      </ul>
+    </div>
   </div>
 </section>
