added some changes

--- a/src/partials/aside.html
+++ b/src/partials/aside.html
@@ -8,23 +8,25 @@
     />
     <div class="sidebar__contacts">
       <h3 class="sidebar__title title">Contacts</h3>
-      <ul class="sidebar__contact-list">
+      <ul class="sidebar__contact-list list">
         <li>
           C:
-          <a href="tel:+380732122234" class="sidebar__contacts-links"
+          <a href="tel:+380732122234" class="sidebar__contacts-links link"
             >+380 73 212 22 34</a
           >
         </li>
         <li>
           E:
-          <a href="mailto:tomoesanya@gmail.com" class="sidebar__contacts-links"
+          <a
+            href="mailto:tomoesanya@gmail.com"
+            class="sidebar__contacts-links link"
             >tomoesanya@gmail.com</a
           >
         </li>
         <li>
           <a
             href="https://www.linkedin.com/in/oleksandr-kucenko-3020a8259/"
-            class="sidebar__contacts-links"
+            class="sidebar__contacts-links link"
             ><svg class="sidebar__svg" width="24">
               <use
                 class="sidebar__use"
@@ -35,7 +37,7 @@
         <li>
           <a
             href="https://github.com/Fstv-Electro"
-            class="sidebar__contacts-links"
+            class="sidebar__contacts-links link"
             ><svg class="sidebar__svg" width="24">
               <use
                 class="sidebar__use"
@@ -47,7 +49,7 @@
     </div>
     <div class="sidebar__tech">
       <h3 class="sidebar__title title">Tech Skills</h3>
-      <ul class="sidebar__tech-list">
+      <ul class="sidebar__tech-list list">
         <li>HTML5</li>
         <li>CSS3</li>
         <li>GIT</li>
@@ -58,7 +60,7 @@
     </div>
     <div class="sidebar__soft">
       <h3 class="sidebar__title title">Soft Skills</h3>
-      <ul class="sidebar__soft-list">
+      <ul class="sidebar__soft-list list">
         <li>Scrum</li>
         <li>Agile</li>
         <li>Waterfall</li>
