--- a/src/partials/education.html
+++ b/src/partials/education.html
@@ -1,7 +1,7 @@
 <section class="education">
   <div class="container">
     <h2 class="education__title title">Education</h2>
-    <ul class="education__list">
+    <ul class="education__list list">
       <li class="education__item">
         <h3 class="education__school">
           Kyiv National Economic University named after Kudryashov
