--- a/src/partials/progress.html
+++ b/src/partials/progress.html
@@ -1,10 +1,10 @@
 <section class="progress">
   <div class="container">
     <h2 class="progress__title title">Road map</h2>
-    <ul class="progress_list">
+    <ul class="progress_list list">
       <li class="progress__list">
         <h3 class="progress__name">HTML5/CSS3</h3>
-        <ul class="progress__module-list">
+        <ul class="progress__module-list list">
           <li class="progress__module-item">
             Basics of HTML. Tags, attributes, semantics.
           </li>
@@ -26,7 +26,7 @@
       </li>
       <li class="progress__list">
         <h3 class="progress__name">JavaScript</h3>
-        <ul class="progress__module-list">
+        <ul class="progress__module-list list">
           <li class="progress__module-item">
             Variables and types. Branching. Cycles.
           </li>
@@ -52,7 +52,7 @@
       </li>
       <li class="progress__list">
         <h3 class="progress__name">React</h3>
-        <ul class="progress__module-list">
+        <ul class="progress__module-list list">
           <li class="progress__module-item">
             Familiarization with React. JSX. Props. Collection.
           </li>
@@ -79,7 +79,7 @@
       </li>
       <li class="progress__list">
         <h3 class="progress__name">Node.js</h3>
-        <ul class="progress__module-list">
+        <ul class="progress__module-list list">
           <li class="progress__module-item">Basics of Node.js</li>
           <li class="progress__module-item">Creating a console application.</li>
           <li class="progress__module-item">Basics of Express.</li>
@@ -96,9 +96,9 @@
           <li class="progress__module-item">Web sockets.</li>
         </ul>
       </li>
-      <li class="progress__list">
+      <li class="progress__list-item">
         <h3 class="progress__name">TypeScript</h3>
-        <ul class="progress__module-list">
+        <ul class="progress__module-list list">
           <li class="progress__module-item"></li>
         </ul>
       </li>
