--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -1,65 +1,65 @@
 <section class="projects">
   <div class="container">
     <h2 class="projects__title title">Projects</h2>
-    <ul class="projects__list">
+    <ul class="projects__list list">
       <li class="projects__item">
         <p class="projects__name">HTML5, CSS3</p>
-        <ul class="projects__item-list">
+        <ul class="projects__item-list list">
           <li><p class="projects__item__descr">Group projects:</p></li>
           <li>
-            <a href="" class="projects__item__link"
+            <a href="" class="projects__item__link link"
               >https://titotrapatonni.github.io/ice-cream-code-ninjas/</a
             >
           </li>
           <li>
-            <a href="" class="projects__item__link"
+            <a href="" class="projects__item__link link"
               >https://fstv-electro.github.io/donut-project/</a
             >
           </li>
         </ul>
-        <ul class="projects__item-list">
+        <ul class="projects__item-list list">
           <li><p class="projects__item__descr">Single projects:</p></li>
-          <li><a href="" class="projects__item__link">...</a></li>
-          <li><a href="" class="projects__item__link">...</a></li>
+          <li><a href="" class="projects__item__link link">...</a></li>
+          <li><a href="" class="projects__item__link link">...</a></li>
         </ul>
       </li>
       <li class="projects__item">
         <p class="projects__name">JavaScript</p>
-        <ul class="projects__item-list">
+        <ul class="projects__item-list list">
           <li><p class="projects__item__descr">Group projects:</p></li>
-          <li><a href="" class="projects__item__link">...</a></li>
-          <li><a href="" class="projects__item__link">...</a></li>
+          <li><a href="" class="projects__item__link link">...</a></li>
+          <li><a href="" class="projects__item__link link">...</a></li>
         </ul>
-        <ul class="projects__item-list">
+        <ul class="projects__item-list list">
           <li><p class="projects__item__descr">Single projects:</p></li>
-          <li><a href="" class="projects__item__link">...</a></li>
-          <li><a href="" class="projects__item__link">...</a></li>
+          <li><a href="" class="projects__item__link link">...</a></li>
+          <li><a href="" class="projects__item__link link">...</a></li>
         </ul>
       </li>
       <li class="projects__item">
         <p class="projects__name">React.js, Node.js</p>
-        <ul class="projects__item-list">
+        <ul class="projects__item-list list">
           <li><p class="projects__item__descr">Group projects:</p></li>
-          <li><a href="" class="projects__item__link">...</a></li>
-          <li><a href="" class="projects__item__link">...</a></li>
+          <li><a href="" class="projects__item__link link">...</a></li>
+          <li><a href="" class="projects__item__link link">...</a></li>
         </ul>
-        <ul class="projects__item-list">
+        <ul class="projects__item-list list">
           <li><p class="projects__item__descr">Single projects:</p></li>
-          <li><a href="" class="projects__item__link">...</a></li>
-          <li><a href="" class="projects__item__link">...</a></li>
+          <li><a href="" class="projects__item__link link">...</a></li>
+          <li><a href="" class="projects__item__link link">...</a></li>
         </ul>
       </li>
       <li class="projects__item">
         <p class="projects__name">Typescript</p>
-        <ul class="projects__item-list">
+        <ul class="projects__item-list list">
           <li><p class="projects__item__descr">Group projects:</p></li>
-          <li><a href="" class="projects__item__link">...</a></li>
-          <li><a href="" class="projects__item__link">...</a></li>
+          <li><a href="" class="projects__item__link link">...</a></li>
+          <li><a href="" class="projects__item__link link">...</a></li>
         </ul>
-        <ul class="projects__item-list">
+        <ul class="projects__item-list list">
           <li><p class="projects__item__descr">Single projects:</p></li>
-          <li><a href="" class="projects__item__link">...</a></li>
-          <li><a href="" class="projects__item__link">...</a></li>
+          <li><a href="" class="projects__item__link link">...</a></li>
+          <li><a href="" class="projects__item__link link">...</a></li>
         </ul>
       </li>
     </ul>
