add some styles

--- a/src/partials/aside.html
+++ b/src/partials/aside.html
@@ -1,29 +1,29 @@
 <section class="sidebar">
-  <div class="container">
-    <img
-      src="/src/images/photo.png"
-      alt="photo man smiling"
-      class="sidebar_photo"
-      width="370"
-    />
-    <div class="sidebar__contacts">
-      <h3 class="sidebar__title title">Contacts</h3>
-      <ul class="sidebar__contact-list list">
-        <li>
-          C:
-          <a href="tel:+380732122234" class="sidebar__contacts-links link"
-            >+380 73 212 22 34</a
-          >
-        </li>
-        <li>
-          E:
-          <a
-            href="mailto:tomoesanya@gmail.com"
-            class="sidebar__contacts-links link"
-            >tomoesanya@gmail.com</a
-          >
-        </li>
-        <li>
+  <img
+    src="/src/images/photo.png"
+    alt="photo man smiling"
+    class="sidebar_photo"
+    width="370"
+  />
+  <div class="sidebar__contacts">
+    <h3 class="sidebar__title title">Contacts</h3>
+    <ul class="sidebar__contact-list list">
+      <li class="sidebar__contact-item sidebar__item">
+        C:
+        <a href="tel:+380732122234" class="sidebar__contacts-links link"
+          >+380 73 212 22 34</a
+        >
+      </li>
+      <li class="sidebar__contact-item sidebar__item">
+        E:
+        <a
+          href="mailto:tomoesanya@gmail.com"
+          class="sidebar__contacts-links link"
+          >tomoesanya@gmail.com</a
+        >
+      </li>
+      <ul class="sidebar__social list">
+        <li class="sidebar__social-item">
           <a
             href="https://www.linkedin.com/in/oleksandr-kucenko-3020a8259/"
             class="sidebar__contacts-links link"
@@ -34,7 +34,7 @@
               ></use></svg
           ></a>
         </li>
-        <li>
+        <li class="sidebar__social-item">
           <a
             href="https://github.com/Fstv-Electro"
             class="sidebar__contacts-links link"
@@ -46,26 +46,26 @@
           ></a>
         </li>
       </ul>
-    </div>
-    <div class="sidebar__tech">
-      <h3 class="sidebar__title title">Tech Skills</h3>
-      <ul class="sidebar__tech-list list">
-        <li>HTML5</li>
-        <li>CSS3</li>
-        <li>GIT</li>
-        <li>WebPack</li>
-        <li>Parcel</li>
-        <li>JavaScript</li>
-      </ul>
-    </div>
-    <div class="sidebar__soft">
-      <h3 class="sidebar__title title">Soft Skills</h3>
-      <ul class="sidebar__soft-list list">
-        <li>Scrum</li>
-        <li>Agile</li>
-        <li>Waterfall</li>
-        <li>GTD</li>
-      </ul>
-    </div>
+    </ul>
+  </div>
+  <div class="sidebar__tech">
+    <h3 class="sidebar__title title">Tech Skills</h3>
+    <ul class="sidebar__tech-list list">
+      <li class="sidebar__tech-item sidebar__item">HTML5</li>
+      <li class="sidebar__tech-item sidebar__item">CSS3</li>
+      <li class="sidebar__tech-item sidebar__item">GIT</li>
+      <li class="sidebar__tech-item sidebar__item">WebPack</li>
+      <li class="sidebar__tech-item sidebar__item">Parcel</li>
+      <li class="sidebar__tech-item sidebar__item">JavaScript</li>
+    </ul>
+  </div>
+  <div class="sidebar__soft">
+    <h3 class="sidebar__title title">Soft Skills</h3>
+    <ul class="sidebar__soft-list list">
+      <li class="sidebar__soft-item sidebar__item">Scrum</li>
+      <li class="sidebar__soft-item sidebar__item">Agile</li>
+      <li class="sidebar__soft-item sidebar__item">Waterfall</li>
+      <li class="sidebar__soft-item sidebar__item">GTD</li>
+    </ul>
   </div>
 </section>
