--- a/src/partials/education.html
+++ b/src/partials/education.html
@@ -7,27 +7,38 @@
           Kyiv National Economic University named after Kudryashov
         </h3>
         <h4 class="education__direction">Banking</h4>
-        <p class="education__period">September 2012 - July 2016 | Ukraine</p>
+        <p class="education__period">
+          September 2012 - July 2016
+          <span class="education__separator">|</span> Ukraine
+        </p>
       </li>
       <li class="education__item">
         <h3 class="education__school">
           Kyiv Higher Vocational School of Railway Transport
         </h3>
         <h4 class="education__direction">Train conductor</h4>
-        <p class="education__period">September 2013 - June 2014 | Ukraine</p>
+        <p class="education__period">
+          September 2013 - June 2014
+          <span class="education__separator">|</span> Ukraine
+        </p>
       </li>
       <li class="education__item">
         <h3 class="education__school">EPAM</h3>
         <h4 class="education__direction">
-          It fundamentals for ukrainian switchers | EPAM/UPSKILL ME
+          It fundamentals for ukrainian switchers
+          <span class="education__separator">|</span> EPAM/UPSKILL ME
         </h4>
-        <p class="education__period">May 2022 - June 2022 | Ukraine</p>
+        <p class="education__period">
+          May 2022 - June 2022
+          <span class="education__separator">|</span> Ukraine
+        </p>
       </li>
       <li class="education__item">
         <h3 class="education__school">GoIT</h3>
         <h4 class="education__direction">FullStack developer</h4>
         <p class="education__period">
-          July 2022 - May 2023 (I'm still learning) | Ukraine
+          July 2022 - May 2023 (I'm still learning)
+          <span class="education__separator">|</span> Ukraine
         </p>
       </li>
     </ul>
