--- a/src/partials/page-1.html
+++ b/src/partials/page-1.html
@@ -1,4 +1,4 @@
-<div class="page" id="pager-1">
+<div class="page" id="page-1">
   <include src="./partials/bio.html"></include>
   <include src="./partials/projects.html"></include>
   <include src="./partials/education.html"></include>
