--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -19,47 +19,47 @@
         </ul>
         <ul class="projects__item-list list">
           <li><p class="projects__item__descr">Single projects:</p></li>
-          <li><a href="" class="projects__item__link link">...</a></li>
-          <li><a href="" class="projects__item__link link">...</a></li>
+          <li><a href="" class="projects__item__link link"></a></li>
+          <li><a href="" class="projects__item__link link"></a></li>
         </ul>
       </li>
       <li class="projects__item">
         <p class="projects__name">JavaScript</p>
         <ul class="projects__item-list list">
           <li><p class="projects__item__descr">Group projects:</p></li>
-          <li><a href="" class="projects__item__link link">...</a></li>
-          <li><a href="" class="projects__item__link link">...</a></li>
+          <li><a href="" class="projects__item__link link"></a></li>
+          <li><a href="" class="projects__item__link link"></a></li>
         </ul>
         <ul class="projects__item-list list">
           <li><p class="projects__item__descr">Single projects:</p></li>
-          <li><a href="" class="projects__item__link link">...</a></li>
-          <li><a href="" class="projects__item__link link">...</a></li>
+          <li><a href="" class="projects__item__link link"></a></li>
+          <li><a href="" class="projects__item__link link"></a></li>
         </ul>
       </li>
       <li class="projects__item">
         <p class="projects__name">React.js, Node.js</p>
         <ul class="projects__item-list list">
           <li><p class="projects__item__descr">Group projects:</p></li>
-          <li><a href="" class="projects__item__link link">...</a></li>
-          <li><a href="" class="projects__item__link link">...</a></li>
+          <li><a href="" class="projects__item__link link"></a></li>
+          <li><a href="" class="projects__item__link link"></a></li>
         </ul>
         <ul class="projects__item-list list">
           <li><p class="projects__item__descr">Single projects:</p></li>
-          <li><a href="" class="projects__item__link link">...</a></li>
-          <li><a href="" class="projects__item__link link">...</a></li>
+          <li><a href="" class="projects__item__link link"></a></li>
+          <li><a href="" class="projects__item__link link"></a></li>
         </ul>
       </li>
       <li class="projects__item">
         <p class="projects__name">Typescript</p>
         <ul class="projects__item-list list">
           <li><p class="projects__item__descr">Group projects:</p></li>
-          <li><a href="" class="projects__item__link link">...</a></li>
-          <li><a href="" class="projects__item__link link">...</a></li>
+          <li><a href="" class="projects__item__link link"></a></li>
+          <li><a href="" class="projects__item__link link"></a></li>
         </ul>
         <ul class="projects__item-list list">
           <li><p class="projects__item__descr">Single projects:</p></li>
-          <li><a href="" class="projects__item__link link">...</a></li>
-          <li><a href="" class="projects__item__link link">...</a></li>
+          <li><a href="" class="projects__item__link link"></a></li>
+          <li><a href="" class="projects__item__link link"></a></li>
         </ul>
       </li>
     </ul>
