--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,4 +1,5 @@
 @import './variables.scss';
 @import './common';
-@import './example';
+@import './partials/page-1.scss';
+@import './partials/page-2.scss';
 
