--- a/src/partials/link-button.html
+++ b/src/partials/link-button.html
@@ -1,4 +1,4 @@
 <div class="container">
-  <a href="#page-1" class="page__link">Portfolio</a>
-  <a href="#page-2" class="page__link">Study progress</a>
+  <a href="#page-1" class="page__link link">Portfolio</a>
+  <a href="#page-2" class="page__link link">Study progress</a>
 </div>
