--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,6 +1,7 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
 
 
+
 html {
     scroll-behavior: smooth;
 }
@@ -25,6 +26,14 @@ html {
     @media screen and (min-width: 1200px) {
         width: var(--desktop);
     }
+}
+
+body {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.22;
+    color: #414141;
 }
 
 h1,
@@ -67,8 +76,9 @@ address {
 }
 
 .title {
-    font-weight: 500;
+    font-weight: 700;
     font-style: 32px;
     line-height: 1.22;
     margin-bottom: 28px;
+    color: black;
 }
