save some styles/ base style main page

--- a/src/partials/aside.html
+++ b/src/partials/aside.html
@@ -1,4 +1,4 @@
-<section class="sidebar">
+<aside class="sidebar">
   <img
     src="/src/images/photo.png"
     alt="photo man smiling"
@@ -68,4 +68,4 @@
       <li class="sidebar__soft-item sidebar__item">GTD</li>
     </ul>
   </div>
-</section>
+</aside>
