--- a/src/partials/link-button.html
+++ b/src/partials/link-button.html
@@ -1,4 +1,4 @@
-<div class="container">
-  <a href="#page-1" class="page__link link">Portfolio</a>
-  <a href="#page-2" class="page__link link">Study progress</a>
-</div>
+<header class="header">
+  <a href="#page-1" class="header__link link current">Portfolio</a>
+  <a href="#page-2" class="header__link link">Study progress</a>
+</header>
