--- a/src/partials/page-1.html
+++ b/src/partials/page-1.html
@@ -1,6 +1,5 @@
-<div class="page" id="page-1">
+<div class="page-1" id="page-1">
   <include src="./partials/bio.html"></include>
   <include src="./partials/projects.html"></include>
   <include src="./partials/education.html"></include>
-  <include src="./partials/aside.html"></include>
 </div>
