--- a/src/sass/partials/aside.scss
+++ b/src/sass/partials/aside.scss
@@ -1,9 +1,9 @@
 .sidebar {
-    padding-top: 24px;
-    padding-bottom: 24px;
+    padding-top: 48px;
+    padding-bottom: 48px;
     width: 370px;
-    margin-left: 0;
-    margin-right: 0;
+    // margin-left: 0;
+    // margin-right: 0;
     
 
     background-color:#1E2939;
@@ -24,7 +24,7 @@
 
 .sidebar__title {
     font-size: 28px;
-    margin-left: 10px;
+    margin-left: 24px;
     margin-bottom: 18px;
     color: var(--white-color);
 }
@@ -33,7 +33,7 @@
 .sidebar__item {
     max-width: 100%;
     margin-bottom: 10px;
-    margin-left: 32px;
+    margin-left: 48px;
     font-size: 16px;
     list-style: disc;
 
@@ -54,7 +54,7 @@
 
 .sidebar__contact-list {
     color: var(--white-color);
-    margin-left: 5px;
+    margin-left: 18px;
     margin-bottom: 24px;
 }
 
