--- a/src/partials/progress.html
+++ b/src/partials/progress.html
@@ -2,7 +2,7 @@
   <div class="container">
     <h2 class="progress__title title">Road map</h2>
     <ul class="progress_list list">
-      <li class="progress__list">
+      <li class="progress__list-item">
         <h3 class="progress__name">HTML5/CSS3</h3>
         <ul class="progress__module-list list">
           <li class="progress__module-item">
@@ -18,13 +18,13 @@
           <li class="progress__module-item">
             Pricing of elements. Transformation. Transitions and animations.
           </li>
-          <li class="progress__module-item">Forms</li>
+          <li class="progress__module-item">Forms.</li>
           <li class="progress__module-item">
             Sensitive layout, sensitive graphics
           </li>
         </ul>
       </li>
-      <li class="progress__list">
+      <li class="progress__list-item">
         <h3 class="progress__name">JavaScript</h3>
         <ul class="progress__module-list list">
           <li class="progress__module-item">
@@ -50,7 +50,7 @@
           <li class="progress__module-item">CRUD. Asynchronous functions.</li>
         </ul>
       </li>
-      <li class="progress__list">
+      <li class="progress__list-item">
         <h3 class="progress__name">React</h3>
         <ul class="progress__module-list list">
           <li class="progress__module-item">
@@ -77,7 +77,7 @@
           <li class="progress__module-item">Private and public routes.</li>
         </ul>
       </li>
-      <li class="progress__list">
+      <li class="progress__list-item">
         <h3 class="progress__name">Node.js</h3>
         <ul class="progress__module-list list">
           <li class="progress__module-item">Basics of Node.js</li>
