--- a/src/sass/partials/progress.scss
+++ b/src/sass/partials/progress.scss
@@ -1,3 +1,28 @@
 .progress {
     margin-top: 64px;
 }
+
+.progress__title {
+    text-align: center;
+}
+
+.progress_list {
+    margin-bottom: 24px;
+}
+
+.progress__list-item{
+    margin-bottom: 36px;
+}
+
+.progress__name {
+    margin-bottom: 18px;
+}
+
+.progress__module-list {
+    margin-left: 18px;
+}
+
+.progress__module-item {
+    margin-bottom: 10px;
+}
+
