--- a/src/sass/partials/link-button.scss
+++ b/src/sass/partials/link-button.scss
@@ -1,8 +1,9 @@
 .header {
-    // position: fixed;
+    position: fixed;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    width: calc(1200px - 370px);
     margin-left: 32px;
     margin-top: 18px;
     gap: 12px;
@@ -36,10 +37,10 @@
 .flex-aside {
     display: flex;
     flex-direction: row-reverse;
-    // justify-content: space-between;
+    justify-content: space-between;
     width: 1200px;
     margin: 0 auto;
-    overflow-x: hidden;
+    overflow: hidden;
     background-color: var(--white-color);
 }
 
@@ -52,35 +53,42 @@
     // width: calc(1200px - 370px);
 }
 
+.main-content {
+        // display: flex;
+        //     flex-direction: row;
+}
+
 .pages {
-    display: flex;
+    position: absolute;
     width: calc(1200px - 370px);
-}
-
-.page-1 {
-    margin-left: 10px;
-    margin-right: auto;
-    transform: translateX(0);
-    transition: transform 500ms ease-in-out;
-}
-
-.page-2 {
-    margin-left: 10px;
-    margin-right: auto;
-    transform: translateX(101%);
-    transition: transform 500ms ease-in-out;
 }
 
 // .page-1 {
 //     margin-left: 10px;
 //     margin-right: auto;
-//     transform: translateX(-201%);
+//     transform: translateX(-101%);
 //     transition: transform 500ms ease-in-out;
 // }
 
 // .page-2 {
 //     margin-left: 10px;
 //     margin-right: auto;
-//     transform: translateX(0);
+//     transform: translateX(101%);
 //     transition: transform 500ms ease-in-out;
 // }
+
+.page-1 {
+    margin-left: 10px;
+    margin-right: auto;
+    transform: translateX(-201%);
+    transition: transform 500ms ease-in-out;
+}
+
+.page-2 {
+    left: 0;
+    top: -1400px;
+    margin-left: 10px;
+    margin-right: auto;
+    transform: translateX(-101%);
+    transition: transform 500ms ease-in-out;
+}
