added list pages

--- a/src/partials/link-button.html
+++ b/src/partials/link-button.html
@@ -1,4 +1,8 @@
 <header class="header">
-  <a href="#page-1" class="header__link link current">Portfolio</a>
-  <a href="#page-2" class="header__link link">Study progress</a>
+  <button class="page-1-link header__link link current" type="submit">
+    Portfolio
+  </button>
+  <button class="page-2-link header__link link" type="submit">
+    Study progress
+  </button>
 </header>
