--- a/src/sass/partials/link-button.scss
+++ b/src/sass/partials/link-button.scss
@@ -35,12 +35,12 @@
 //   main content
 
 .flex-aside {
-    display: flex;
-    flex-direction: row-reverse;
+    // display: flex;
+    // flex-direction: row-reverse;
     justify-content: space-between;
     width: 1200px;
     margin: 0 auto;
-    overflow: hidden;
+    overflow-x: hidden;
     background-color: var(--white-color);
 }
 
@@ -50,45 +50,55 @@
     transform: translateX(-50%);
     margin-left: auto;
     margin-right: auto;
+    // height: 100%;
     // width: calc(1200px - 370px);
 }
 
 .main-content {
-        // display: flex;
-        //     flex-direction: row;
+    position: absolute;
+        display: flex;
+            flex-direction: row-reverse;
+            // flex-wrap: wrap;
 }
 
 .pages {
-    position: absolute;
+    display: flex;
+    flex-direction: column;
     width: calc(1200px - 370px);
 }
-
-// .page-1 {
-//     margin-left: 10px;
-//     margin-right: auto;
-//     transform: translateX(-101%);
-//     transition: transform 500ms ease-in-out;
-// }
-
-// .page-2 {
-//     margin-left: 10px;
-//     margin-right: auto;
-//     transform: translateX(101%);
-//     transition: transform 500ms ease-in-out;
-// }
 
 .page-1 {
     margin-left: 10px;
     margin-right: auto;
-    transform: translateX(-201%);
+    
+    transform: translateX(0);
     transition: transform 500ms ease-in-out;
 }
 
-.page-2 {
-    left: 0;
-    top: -1400px;
+.page-2{
     margin-left: 10px;
     margin-right: auto;
-    transform: translateX(-101%);
+
+    transform: translateX(150%);
     transition: transform 500ms ease-in-out;
 }
+
+.page-1-link,
+.page-2-link {
+    border: none;
+    outline: none;
+}
+
+// .page-1.active {
+//     margin-left: 10px;
+//     margin-right: auto;
+//     transform: translateX(-150%);
+//     transition: transform 500ms ease-in-out;
+// }
+
+// .page-2.active {
+//     margin-left: 10px;
+//     margin-right: auto;
+//     transform: translateX(50%);
+//     transition: transform 500ms ease-in-out;
+// }
