--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -2,10 +2,10 @@
   <div class="container">
     <h2 class="projects__title title">Projects</h2>
     <ul class="projects__list list">
-      <li class="projects__item">
+      <!-- <li class="projects__item">
         <p class="projects__name">HTML5, CSS3</p>
-        <ul class="projects__item-list list">
-          <li><p class="projects__item__descr">Group projects:</p></li>
+        <ul class="projects__item-list list"> -->
+      <!-- <li><p class="projects__item__descr">Group projects:</p></li>
           <li>
             <a href="" class="projects__item__link link"
               >https://titotrapatonni.github.io/ice-cream-code-ninjas/</a
@@ -61,7 +61,7 @@
           <li><a href="" class="projects__item__link link"></a></li>
           <li><a href="" class="projects__item__link link"></a></li>
         </ul>
-      </li>
+      </li> -->
     </ul>
   </div>
 </section>
