--- a/src/sass/partials/link-button.scss
+++ b/src/sass/partials/link-button.scss
@@ -58,7 +58,8 @@
     position: absolute;
         display: flex;
             flex-direction: row-reverse;
-            // flex-wrap: wrap;
+            width: 1200px;
+            height: 100%;
 }
 
 .pages {
