added some json elements.

--- a/src/partials/progress.html
+++ b/src/partials/progress.html
@@ -13,14 +13,14 @@
           </li>
           <li class="progress__module-item">Block panel. Flexbox.</li>
           <li class="progress__module-item">
-            Background and decorative elements
+            Background and decorative elements.
           </li>
           <li class="progress__module-item">
             Pricing of elements. Transformation. Transitions and animations.
           </li>
           <li class="progress__module-item">Forms.</li>
           <li class="progress__module-item">
-            Sensitive layout, sensitive graphics
+            Sensitive layout, sensitive graphics.
           </li>
         </ul>
       </li>
@@ -32,15 +32,15 @@
           </li>
           <li class="progress__module-item">Arrays. Functions.</li>
           <li class="progress__module-item">
-            Objects. Operations rest and spread
+            Objects. Operations rest and spread.
           </li>
           <li class="progress__module-item">Iterative methods of arrays.</li>
           <li class="progress__module-item">
             Keyword this. Prototypes and classes.
           </li>
-          <li class="progress__module-item">DOM and events</li>
+          <li class="progress__module-item">DOM and events.</li>
           <li class="progress__module-item">
-            patterns and optimization of events.
+            Patterns and optimization of events.
           </li>
           <li class="progress__module-item">
             Infrastructure projects. Web storage.
