have some idea.

--- a/src/partials/progress.html
+++ b/src/partials/progress.html
@@ -3,7 +3,7 @@
     <h2 class="progress__title title">Road map</h2>
     <ul class="progress_list list">
       <li class="progress__list-item">
-        <h3 class="progress__name">HTML5/CSS3</h3>
+        <h3 class="progress__name complete">HTML5/CSS3 &#x2713</h3>
         <ul class="progress__module-list list">
           <li class="progress__module-item">
             Basics of HTML. Tags, attributes, semantics.
@@ -25,7 +25,7 @@
         </ul>
       </li>
       <li class="progress__list-item">
-        <h3 class="progress__name">JavaScript</h3>
+        <h3 class="progress__name complete">JavaScript &#x2713</h3>
         <ul class="progress__module-list list">
           <li class="progress__module-item">
             Variables and types. Branching. Cycles.
@@ -51,14 +51,14 @@
         </ul>
       </li>
       <li class="progress__list-item">
-        <h3 class="progress__name">React</h3>
+        <h3 class="progress__name in-progress">React</h3>
         <ul class="progress__module-list list">
           <li class="progress__module-item">
             Familiarization with React. JSX. Props. Collection.
           </li>
           <li class="progress__module-item">Stylization.</li>
           <li class="progress__module-item">Events. State.</li>
-          <li class="progress__module-item">Forms</li>
+          <li class="progress__module-item">Forms.</li>
           <li class="progress__module-item">Life cycle.</li>
           <li class="progress__module-item">Working with API.</li>
           <li class="progress__module-item">React hooks part 1.</li>
@@ -78,7 +78,7 @@
         </ul>
       </li>
       <li class="progress__list-item">
-        <h3 class="progress__name">Node.js</h3>
+        <h3 class="progress__name soon">Node.js</h3>
         <ul class="progress__module-list list">
           <li class="progress__module-item">Basics of Node.js</li>
           <li class="progress__module-item">Creating a console application.</li>
@@ -96,7 +96,7 @@
           <li class="progress__module-item">Web sockets.</li>
         </ul>
       </li>
-      <li class="progress__list-item">
+      <li class="progress__list-item soon">
         <h3 class="progress__name">TypeScript</h3>
         <ul class="progress__module-list list">
           <li class="progress__module-item"></li>
